Refactor: 4 Event endpoints to 1 for easier search and queries
