# backend/cmd/main.go
@@ -148,10 +148,6 @@ func main() {
 	e.GET("/events", eventHandler.List)
 	e.GET("/events/:id", eventHandler.FindByID)
 	e.GET("/events/name/:name", eventHandler.FindByName)
-	e.GET("/events/search", eventHandler.Search)
-	e.GET("/events/before", eventHandler.FindAllBefore)
-	e.GET("/events/after", eventHandler.FindAllAfter)
-	e.GET("/events/between", eventHandler.FindAllBetween)
 	e.PUT("/events/:id", eventHandler.Update)
 	e.DELETE("/events/:id", eventHandler.Delete)
 	e.POST("/events/:id/participants", eventHandler.Join, authMiddleware)
