# backend/internal/models/event_query.go
@@ -1,0 +1,10 @@
+package models
+
+import "time"
+
+type EventQuery struct {
+	Search string
+	Before *time.Time
+	After  *time.Time
+	Full   *bool
+}
